@@ -624,9 +624,11 @@ BUG FIXES
     o	The GNOME interface was in some circumstances failing if run
 	from a menu -- it needed to always specify that R be interactive.
 
-    0	depMtrxToStrings (part of pkgDepends) applied nrow() to a
+    o	depMtrxToStrings (part of pkgDepends) applied nrow() to a
         non-matrix and aborted on the result.
 
+    o   Fix some issues with nonsyntactical names in modelling code
+        (PR# 7202), relating to backquoting. There are likely more.
 
 
 
